2001-12-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-modeline-process-status-on): Modify default value.
	(w3m-buffer-setup): Simplified `mode-line-buffer-identification'.

2001-11-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-imagick-convert-program): New user option.
	(w3m-favicon-size): Ditto.
	(w3m-use-favicon): Ditto.
	(w3m-favicon-name): New constant.
	(w3m-current-favicon-data): New buffer local variable.
	(w3m-current-favicon-image): Ditto.
	(w3m-display-hook): Added 'w3m-setup-favicon.
	(w3m-imagick-convert-buffer): New function.
	(w3m-imagick-convert-data): Ditto.
	(w3m-setup-favicon): Ditto.
	(w3m-buffer-favicon): Ditto.
	(w3m-retrieve-favicon): Ditto.
	(w3m-tab-line): Display favicon on tab.

2001-11-28  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-xmas.el (w3m-insert-image): Rewrite.
	(if displayed images exist on the right side, keep them and display
	again)
	(w3m-remove-image): Call `delete-extent' to destroy extents.

2001-11-27  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* TIPS: New file.

2001-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-get-headers): Make directory
	separator not duplicated.

2001-11-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-download-this-url): Fix a problem of broken URL.

2001-11-24  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-fml.el (shimbun-get-headers): Call
	`shimbun-decode-entities' and `shimbun-remove-markup' for SUBJECT.

2001-11-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (top, w3m-about): Change the URL of w3m's official page.

2001-11-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-max-anchor-sequence): New buffer local variable.
	(w3m-copy-local-variables, w3m-clear-local-variables): Handle
	`w3m-max-anchor-sequence'.
	(w3m-fontify-anchors): Reset `w3m-max-anchor-sequence' to zero.
	Use the text-property `w3m-anchor-sequence' insted of
	`w3m-cursor-anchor'.